2006-01-22  Philip Langdale  <philipl@mail.utexas.edu>

	This change is the first part of cleaning up the
	tangled gweather applet code. One of the main goals
	is to reorganise the code associated with each main
	widget (applet, details, prefs) into proper GObjects.
	This particular change handles the Prefs Dialog.

	* gweather-xml.c
	* gweather-xml.h: Move TreeModel column definitions
	here from GWeatherPref. Although it would be overkill
	to do so, we think of the Locations tree model as being
	a subclass with specific columns.

	* gweather-pref.h
	* gweather-pref.c: (everything). Make the prefs dialog
	a real GObject inheriting from GtkDialog. We now enforce
	a proper interface and fully encapsulate the dialog's
	implementation.

	* gweather.h: Remove all pref widgets from struct.

	* gweather-applet.c: (pref_cb): Move singleton
	handling here and instantiate the prefs dialog properly.

2006-01-21  Vincent Untz  <vuntz@gnome.org>

	* docs/fr/fr.po: small update

2006-01-16  Davyd Madeley  <davyd@madeley.id.au>

	* Locations.xml.in: Adjust metar site id for Alamogordo, NM US to a
	geographically closer and more reliable site.  KHMN to KALM.
	Patch from Jerimiah Cole <jcole@thend.org>. Closes #327143.

2006-01-15  Davyd Madeley  <davyd@madeley.id.au>

	* gweather-pref.c: add atmospheres as a unit of pressure
	  Patch from Alexandros Frantzis <alfius@freemail.gr>. Closes
	  #325447.

2006-01-12  Frank Solensky  <frank@solensky.org>

	* gweather-applet.c: (applet_destroy), (update_finish),
	(suncalc_timeout_cb):
	* gweather-applet.h:
	* gweather-pref.c: (auto_update_toggled):
	* gweather.h:  Use a separate timer to drive icon transitions.
	Closes bug #310807.

2006-01-10  Kjartan Maraas  <kmaraas@gnome.org>

	* main.c: (gweather_applet_new): Plug a small leak.

2006-01-08  Kjartan Maraas  <kmaraas@gnome.org>

	* Locations.xml.in: Fix the name for Mexico and Mexico City.
	(Pedro Villavicencio Garrido). Closes bug #171718.

2006-01-07  Vincent Untz  <vuntz@gnome.org>
