@@ -169,5 +169,15 @@
 		<long>The custom url from where to retrieve a radar map.</long>
 	</locale>
 </schema>
+<schema>
+	<key>/schemas/apps/gweather/prefs/show_notifications</key>
+	<owner>gweather-applet-2</owner>
+	<type>bool</type>
+	<default>false</default>
+	<locale name="C">
+		<short>Show popup notifications for weather</short>
+		<long>Show a notification bubble when the weather updates.</long>
+	</locale>
+</schema>
 </schemalist>
 </gconfschemafile>
