@@ -1,3 +1,10 @@
+2006-01-30  Davyd Madeley  <davyd@madeley.id.au>
+
+	* gweather-applet.c: Remove FIXME's from libnotify code. Move
+	  libnotify preference into the same location as the other preferences
+	  for the applet.
+	* gweather.schemas.in: add a schema for the notification preference
+
 2006-01-22  Philip Langdale  <philipl@mail.utexas.edu>
 
 	This change is the first part of cleaning up the
